--- a/Jane.Todo.Web/_Imports.razor
+++ b/Jane.Todo.Web/_Imports.razor
@@ -6,4 +6,6 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.JSInterop
 @using Jane.Todo.Web
+@using Jane.Todo.Web.Extensions
 @using Jane.Todo.Web.Shared
+@using Jane.Todo.Web.Pages.ViewModels 
