--- a/Jane.Todo.Web/Pages/TaskEdit.razor
+++ b/Jane.Todo.Web/Pages/TaskEdit.razor
@@ -29,6 +29,10 @@ else
                 <InputDate id="dueDate" class="form-control col-sm-8" @bind-Value="@viewModel.TaskForm.DueDate" placeholder="Enter due date"></InputDate>
                 <ValidationMessage class="offset-sm-3 col-sm-8" For="@(() => viewModel.TaskForm.DueDate)" />
             </div>
+            @*<div class="form-group row">
+                <label for="dueDate2" class="col-sm-3">Due date: </label>
+                <input type="date" id="dueDate2" class="form-control col-sm-8" @bind="viewModel.TaskForm.DueDate" placeholder="Enter due date 2" />
+            </div>*@
             @if (viewModel.TaskForm.Id > 0)
             {
                 <div class="form-group row">
@@ -41,7 +45,7 @@ else
             {
                 <button type="button" class="btn btn-danger" @onclick="@viewModel.Delete" />
             }
-            </EditForm>
+        </EditForm>
     </section>
 }
 
